fix horizontal scroll in page portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -1281,6 +1281,7 @@ p {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: 0;
   }
 }
 
@@ -1294,6 +1295,7 @@ p {
   .project__item {
     max-width: 450px;
     width: 100%;
+    margin-left: 0;
   }
 }
 
