--- a/sass/layouts/_projects.scss
+++ b/sass/layouts/_projects.scss
@@ -18,6 +18,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-left: 0;
   }
 }
 .project__item {
@@ -28,6 +29,7 @@
   @media screen and (max-width: 767.98px) {
     max-width: 450px;
     width: 100%;
+    margin-left: 0;
   }
   @media screen and (min-width: 768px) and (max-width: 1199.98px) {
     max-width: 354px;
